@@ -1,6 +1,6 @@
 abcMIDI :   abc <-> MIDI conversion utilities
 
-midi2abc version 2.91 March 09 2008
+midi2abc version 2.92 August 04 2008
 abc2midi version 2.09 July  21 2008
 abc2abc  version 1.57 July  17 2008
 yaps     version 1.50 Jan   04 2008
